# MltFramework

./: .gitignore  CMakeLists.txt  README.md
src/examples/: CMakeLists.txt  play.cpp
src/framework/: CMakeLists.txt
src/mlt++/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/avformat/: CMakeLists.txt
src/modules/core/: CMakeLists.txt
src/modules/rtaudio/: RtAudio.cpp
src/modules/sdl2/: CMakeLists.txt
